# microdcs

./: .gitignore  404.html  Dockerfile  README.md  TODO.md  index.html  mkdocs.yml  mqtt_sender.py  msgpack_sender.py  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md
app/: __init__.py  __main__.py  common.py  core.py  dataclass.py  identity_processor.py  machinery_jobs.py  microdcs.py  mqtt.py  msgpack.py  redis.py
app/dataclasses/: machinery_jobs.py  machinery_jobs_ext.py
app/models/: greetings.py  greetings_mixin.py  machinery_jobs.py  machinery_jobs_ext.py  machinery_jobs_mixin.py
app/processors/: greetings.py  machinery_jobs.py
concepts/: index.html
deploy/: k8s.yaml
development/: index.html
docs/: concepts.md  development.md  index.md  information-model-standards.md  machinery-jobs-mes-publishing.md  operations.md  overall-design.md  persistence.md  sfc_engine.md  technical-standards.md  your-first-processor.md
information-model-standards/: index.html
machinery-jobs-mes-publishing/: index.html
operations/: index.html
overall-design/: index.html
persistence/: index.html
schemas/: greetings.jsonschema.json  greetings.schema.json  sfc_recipe.schema.json
scripts/: dataclassgen.py  init_app.sh
scripts/template/: dataclass.jinja2
search/: search_index.json
sfc_engine/: index.html
src/microdcs/: __init__.py  common.py  core.py  dataclass.py  mqtt.py  msgpack.py  redis.py  sfc_engine.py
src/microdcs/models/: __init__.py  greetings.py  greetings_mixin.py  machinery_jobs.py  machinery_jobs_ext.py  sfc_recipe.py  sfc_recipe_ext.py
src/microdcs/processors/: __init__.py  greetings.py  machinery_jobs.py
src/microdcs/publishers/: __init__.py  machinery_jobs.py
src/microdcs/scripts/: dataclassgen.py  init.py  microdcs.py
src/microdcs/scripts/init/: Dockerfile  __main__.py  copilot-instructions.md  k8s.yaml  tasks.json
src/microdcs/scripts/template/: dataclass.jinja2
technical-standards/: index.html
tests/: conftest.py  statemachine_test.py  test_common.py  test_core.py  test_dataclass.py  test_dataclassgen.py  test_greetings_processor.py  test_identity_processor.py  test_init.py  test_job_order_publisher.py  test_machinery_jobs_processor.py  test_main.py  test_mes_integration.py  test_mqtt.py  test_mqtt_integration.py  test_msgpack.py  test_msgpack_integration.py  test_package_exports.py  test_publisher.py  test_redis.py  test_sfc_engine.py  test_sfc_recipe.py
your-first-processor/: index.html
