[project]
name = "micro-dcs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiomqtt>=2.4.0",
    "mashumaro[orjson]>=3.17",
    "msgpack>=1.1.2",
    "opentelemetry-distro>=0.60b1",
    "redis[hiredis]>=7.1.0",
    "transitions>=0.9.3",
]

[dependency-groups]
dev = [
    "datamodel-code-generator[ruff]>=0.53.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "typer>=0.21.1",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
