[project]
name = "microdcs"
version = "0.1.0"
description = "An Open-Standards-Based Framework for Distributed Sequence Control Applications"
readme = "README.md"
authors = [
    { name = "Andreas Schamberger", email = "mail@andreass.net" }
]
requires-python = ">=3.14"
dependencies = [
    "aiomqtt>=2.4.0",
    "mashumaro[orjson]>=3.17",
    "msgpack>=1.1.2",
    "opentelemetry-distro>=0.60b1",
    "redis[hiredis]>=7.1.0",
    "transitions>=0.9.3",
    "typer>=0.24.0",
]

[project.urls]
Homepage = "https://microdcs.io"
Documentation = "https://aschamberger.github.io/microdcs/"
Repository = "https://github.com/aschamberger/microdcs"
Issues = "https://github.com/aschamberger/microdcs/issues"

[dependency-groups]
dev = [
    "click==8.2.1",
    "datamodel-code-generator[ruff]>=0.54.0",
    "mkdocs-material>=9.7.6",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[project.scripts]
microdcs = "microdcs.scripts.microdcs:app"

[build-system]
requires = ["uv_build>=0.10.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring external services (MQTT, Redis)",
]

[tool.ruff]
format.preview = true
